--- a/web designing/contacts.html
+++ b/web designing/contacts.html
@@ -6,11 +6,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-       <ul>
-           <li><a href="index.html">Home</a></li>
-           <li><a href="about.html">About Me</a></li>
-           <li hidden><a href="contacts.html">Contact Me</a></li>
-           <li><a href="portfolio.html">Portfolio</a></li>
-       </ul>
+        <nav>
+            <ul>
+                <li hidden><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contacts.html">Contact Me</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+          </nav>  
     </body>
 </html>
