--- a/web designing/portfolio.html
+++ b/web designing/portfolio.html
@@ -7,12 +7,17 @@
     </head>
     <body>
         <nav>
-            <ul>
-                <li hidden><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="contacts.html">Contact Me</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-          </nav>  
+            <div class="wrapper">
+                <ul>
+                    <li hidden><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="contacts.html">Contact Me</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    </ul>
+            </div>
+        </nav>  
+        <div class="wrapper">
+          <h1>Portfolio</h1>
+        </div>
     </body>
 </html>
