--- a/web designing/index.html
+++ b/web designing/index.html
@@ -19,6 +19,15 @@
         <div class="wrapper">
           <h1>Home Page</h1>
           <div class="imaging"></div>
+          <video autoplay poster="images/apache-spark.jpg" controls>
+            <source src="videos/partial.mp4" type="video/mp4">
+                Your browser does not support mp4!:(
+        </video>
+        <div class="videoFraming">
+            <iframe src="https://www.youtube.com/embed/ml4NSzCQobk?start=116" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/379228419?byline=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        </div>
         </div>
     </body>
-</html>
+</html> 
