making the site responsive for mobile-view.

--- a/web designing/index.html
+++ b/web designing/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>My Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -16,17 +17,16 @@
                     </ul>
             </div>
         </nav>  
+        
         <div class="wrapper">
-          <h1>Home Page</h1>
-          <div class="imaging"></div>
-          <video autoplay poster="images/apache-spark.jpg" controls>
-            <source src="videos/partial.mp4" type="video/mp4">
-                Your browser does not support mp4!:(
-        </video>
+            <img class="banner" src="images/download.jfif" alt="magic">
+            <article class="image-info">
+                <p>this is the best feeling I am having in my life. I am coming to know how things work and how simple it may look from inside but its not that easy to look. have a life which challenge you at every point of your life.</p>
+            </article>
+          <h1 class="forward">Home Page</h1>
         <div class="videoFraming">
-            <iframe src="https://www.youtube.com/embed/ml4NSzCQobk?start=116" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe src="https://player.vimeo.com/video/379228419?byline=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-
+            <iframe class="firstyou" width="560" height="315" src="https://www.youtube.com/embed/TgiBvKcGL24" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="secondvim" src="https://player.vimeo.com/video/379228419?byline=0" width="640" height="360" frameborder="1" allow="autoplay; fullscreen" allowfullscreen></iframe>
         </div>
         </div>
     </body>
